Fix Curvedline svg overflowing homepage by adding overflow props to body (#69)

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -41,6 +41,7 @@ body {
   min-width: 320px;
   min-height: 100vh;
   background-color: #11121c;
+  overflow: hidden;
 }
 
 #root {
